# CPAttributes

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: cp_attributes.hpp
serde/: serde.hpp
test/: json_tests.hpp  test.cpp
